# stonk_app

./: .gitignore  README.md  bbeta.py  beta.py  hm.py  pyproject.toml  sc.py
src/: config.ini
src/pkg/: __init__.py  app_cli.py  main_cli.py
src/pkg/cli/: cmd_backtest.py  cmd_config.py  main_console.py
src/pkg/helper/: __init__.py  ctx_mgr.py  helper_test.py  misc.py  pd_utils.py  plt_utils.py  utils.py
src/pkg/helper/tests/: helper_ctx_mgr_test.py  helper_misc_test.py  helper_pd_utils_test.py  helper_plt_utils_test.py
src/pkg/srv_backtest/: __init__.py  agent.py  cfg_backtest.ini  cli.py  client.py  interface.py
src/pkg/srv_backtest/tests/: backtest_agent_test.py
src/pkg/srv_chart/: agent.py  cli.py  cli_heatmap.py  cli_hm.py  cli_sc.py  cli_stockchart.py  client.py  config.ini  interface.py
src/pkg/srv_data/: __init__.py  agent.py  cli.py  client.py  config.ini  interface.py
src/pkg/srv_plot/: __init__.py  agent.py  cli.py
src/pkg/srv_scrape/: __init__.py  agent.py  cli_hm.py  cli_sc.py  client.py  config.ini
src/pkg/srv_scrape/tests/: scrape_agent_test.py  scrape_client_hm_test.py  scrape_client_sc_test.py
tests/: test_cli.py  test_cli_chart.py  test_cli_data.py  test_cli_heatmap.py  test_cli_main.py  test_cli_plot.py  test_config.py  test_ctx_mgr.py  test_utils.py
tests/cli/: test_chart.py  test_heatmap.py
tests/data/: test_agent.py
tests/srv_chart/: test_chart_client.py  test_client.py  test_heatmap.py  test_stockchart.py
tests/srv_data/: test_agent.py  test_client.py  test_data_agent.py  test_reader.py
